BIS-2259: Clean up resource handling